Added AJAX calls to get weather

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
         <h3> </h3>
         <p>PSM is <span id="psmStatus">On</span></p>
       </div>
+      <div id="weather">
+        <p>Current Temperature in <span id="city">London</span> is: <span id="weatherDescription"></span>°</p>
+        <input id="#cityChoice" type="text" placeholder="Alternate City">
+      </div>
       <div id="buttons">
         <button id="up" class="btn1">+</button>
         <button id="down" class="btn2">-</button>
