--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Thermostat</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="outer_box">
-      <div id="screen">
-        <h3> </h3>
-        <p>PSM is <span id="psmStatus">On</span></p>
+    <div class="wrapper">
+      <div class="left">
+        <h3 class="temperature"> </h3>
+        <div class="buttons">
+          <button id="up" class="btn1">+</button>
+          <button id="down" class="btn2">-</button>
+          <button id="reset" class="btn3">reset</button>
+        </div>
+        <div class="line"></div>
+        <p class="psm-description">power saving mode</p>
+        <p id="psm-status">on</p>
+        <button id="psm-toggle">on / off</button>
       </div>
-      <div id="weather">
-        <p>Current Temperature in <span id="city">London</span> is: <span id="weatherDescription"></span>°</p>
-        <input id="#cityChoice" type="text" placeholder="Alternate City">
-      </div>
-      <div id="buttons">
-        <button id="up" class="btn1">+</button>
-        <button id="down" class="btn2">-</button>
-        <button id="reset" class="btn3">R</button>
-        <button id="psm" class="btn4">PSM</button>
+      <div class="right">
+        <div class="degrees">
+          <p>degrees</p>
+        </div>
+        <p id="therm-icon"><span class="fas fa-thermometer-three-quarters fa-7x"></span></p>
       </div>
     </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
     <script src="../lib/jquery-3.3.1.min.js"></script>
     <script src="./Thermostat.js"></script>
     <script src="./logic.js"></script>
