--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v2.9.0</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.9.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.9.0/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="./public/js/lib/jasmine-2.9.0/jasmine_favicon.png">
+  <link rel="stylesheet" href="./public/js/lib/jasmine-2.9.0/jasmine.css">
 
-  <script src="lib/jasmine-2.9.0/jasmine.js"></script>
-  <script src="lib/jasmine-2.9.0/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.9.0/boot.js"></script>
+  <script src="./public/js/lib/jasmine-2.9.0/jasmine.js"></script>
+  <script src="./public/js/lib/jasmine-2.9.0/jasmine-html.js"></script>
+  <script src="./public/js/lib/jasmine-2.9.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Thermostat.js"></script>
+  <script src="./public/js/Thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ThermostatSpec.js"></script>
